apps/frontend/prodConfig/sveltekit-service.yml
apiVersion: v1
kind: Service
metadata:
  name: sveltekit-service
spec:
  type: LoadBalancer
  selector:
    app: sveltekit
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8081
