apps/frontend/prodConfig/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: area-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
    nginx.ingress.kubernetes.io/enable-cors: 'true'
    nginx.ingress.kubernetes.io/cors-allow-methods: 'PUT, GET, POST, OPTIONS, DELETE, PATCH'
    nginx.ingress.kubernetes.io/cors-allow-origin: '*'
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /api/(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: area-api
                port:
                  number: 80
          - path: /(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: area-frontend
                port:
                  number: 80
