apps/frontend/prodConfig/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: web-ingress
  annotations:
    # This tells Google Cloud to create an External Load Balancer to realize this Ingress
    kubernetes.io/spec.ingressClassName: gce
    # This enables HTTP connections from Internet clients
    kubernetes.io/ingress.allow-http: 'true'
    # This tells Google Cloud to associate the External Load Balancer with the static IP which we created earlier
    kubernetes.io/ingress.global-static-ip-name: web-ip

    cert-manager.io/issuer: letsencrypt-staging
spec:
  tls:
    - hosts:
        - area.oden-app.com
  defaultBackend:
    service:
      name: web
      port:
        number: 8082
